fix autocomplete z-index

--- a/index/static/style.css
+++ b/index/static/style.css
@@ -330,7 +330,7 @@ form {
   border: 2px solid #00bfa5;
   border-radius: .25rem;
   box-shadow: rgba(0, 0, 0, .5) 0 0 5px;
-  z-index: 9001;
+  z-index: 1;
 }
 .autocomplete img {
   float: right;
